# omelette

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  SECURITY.md  docker-compose.yml  environment.yml  package-lock.json  package.json  playwright.config.ts
backend/: README.md  conftest.py  pyproject.toml  test_omelette.db-shm  test_omelette.db-wal
backend/alembic/: env.py
backend/alembic/versions/: 082111bd1d99_initial_schema.py  1611c43dcb7f_add_concepts_table.py  37aec63cf80d_merge_all_heads.py  72c0845957f5_add_conversation_message_user_settings.py  9a1b2c3d4e5f6_add_composite_indexes.py  a1b2c3d4e5f6_add_activity_logs_table.py  a1b2c3d4e5f6_add_composite_indexes.py  a1b2c3d4e5f6_add_reading_sessions_table.py  a1b2c3d4e5f7_add_team_members_table.py  a2b3c4d5e6f7_add_collections_tables.py  b1c2d3e4f5a6_add_api_keys_table.py  b601f8ed7674_add_rating_and_quality_tags_to_paper.py  c1d2e3f4a5b6_add_content_hash_to_paper.py  cb8130e58f92_add_paper_project_doi_unique_constraint.py  d409bcf884d8_add_project_icon_and_color.py  e7a9b1c3d5f7_add_keyword_parent_id_index.py  e8f2a3b1c4d5_add_subscriptions_table.py  f0a1b2c3d4e5_add_reviews_tables.py  (+6 more)
backend/app/: config.py  database.py  main.py  mcp_server.py
backend/scripts/: gpu_watchdog.py
backend/tests/: test_api_chat_rag_writing.py  test_api_convos_subs_tasks_settings.py  test_api_keys.py  test_api_keywords_search_dedup.py  test_api_projects_papers.py  test_audio_overviews.py  test_author_network.py  test_browser_upload.py  test_chat.py  test_chat_pipeline.py  test_citation_graph.py  test_collections.py  test_completion.py  test_concepts.py  test_contradiction_detection.py  test_crawler.py  test_dedup.py  test_e2e_live_server.py  test_e2e_quality.py  test_e2e_stress.py  test_embedding.py  test_evidence_consensus.py  test_feed.py  test_gap_analysis.py  test_gpu_api.py  test_gpu_mode_config.py  test_gpu_model_manager.py  test_impact_scores.py  test_integration.py  test_keywords.py  test_knowledge_base.py  test_library.py  test_llm_config_resolver.py  test_llm_settings.py  test_mcp.py  test_middleware.py  test_mineru_client.py  test_mineru_process_manager.py  test_new_features.py  test_nodes.py  (+25 more)
(+643 files in other folders)
